syntax = "proto3";

package Blocksettle.Communication.MDStatus;

enum MDStatusServerRequestType
{
   GetStatusRequestType = 0;
}

message MDStatusRequestHeader
{
   MDStatusServerRequestType request_type = 1;
}

enum MDSTatusResponseType
{
   GetStatusResponseType = 0;
}

message MDStatusResponseHeader
{
   MDSTatusResponseType response_type = 1;
   bytes                response_data = 2;
}

message MDStatusServerStatus
{
   bool connected_to_livestream  = 1;
   bool connected_to_th          = 2;

   // FX stream timeouts
   // timeout - time interval since last pair received. in ms
   uint64 eur_gbp_timeout = 3;
   uint64 eur_cad_timeout = 4;
   uint64 gbp_cad_timeout = 5;
   uint64 eur_usd_timeout = 6;
   uint64 gbp_usd_timeout = 7;
   uint64 usd_cad_timeout = 8;

   // XBT stream timeouts
   uint64 xbt_gbp_timeout = 9;
   uint64 xbt_eur_timeout = 10;
   uint64 xbt_cad_timeout = 11;
   uint64 xbt_usd_timeout = 12;
}
